testsuite/tests/overloadedrecflds/should_run/OverloadedRecFldsRun07_B.hs
{-# LANGUAGE OverloadedRecordFields, TypeFamilies #-}

module OverloadedRecFldsRun07_B ( F(..) ) where

import OverloadedRecFldsRun07_A ( F(..) )

data instance F Int = MkFInt { foo :: Int }
